--- a/Plazoleta-Service/service/src/main/resources/application.properties
+++ b/Plazoleta-Service/service/src/main/resources/application.properties
@@ -5,8 +5,9 @@ logging.level.com.plazoleta.service=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_service
 spring.datasource.username=postgres
 spring.datasource.password=Admin123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-plazoleta.usuarios.base-url=http://localhost:8081
+plazoleta.usuarios.base-url=http://localhost:8083
+plazoleta.usuarios.role-path=/usuarios/{id}/rol
 jwt.secret=plazoleta-local-secret-2026-04-08-01
